--- a/game.html
+++ b/game.html
@@ -23,10 +23,9 @@
     <!-- Help and About pages -->
     <header>
         <div class="container">
-            <nav class="navbar navbar-dark">
-                <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
-                    data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-                    aria-label="Toggle navigation">
+            <nav class="navbar navbar-expand-sm navbar-dark">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
@@ -34,7 +33,7 @@
                             <a class="nav-link sr-only" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="help.html">Help</a>
+                            <a class="nav-link" href="help.html">How To Play</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about.html">About</a>
@@ -51,38 +50,37 @@
                 <div class="col-12 text-center">
                     <h1>Follow the House</h1>
                 </div>
+                <button id="play"><i class="far fa-play-circle"></i></button>
             </div>
             <div class="row">
-                <div class="col">
-                    <button id="play"><i class="far fa-play-circle"></i></button>
+                <div class="col-8 col-md-12">
                     <div class="row top-row">
-                        <div class="col-0 col-md-2 col-lg-3">
-                        </div>
-                        <div class="col-6 col-md-4 col-lg-3">
+                        <div class="col-8 col-md-6">
                             <input id="gryffindor" type="image" src="assets/images/gryffindor-crest.png"
                                 class="game-btn inline-block gryffindor" alt="gryffindor Crest">
                         </div>
-                        <div class="col-6 col-md-4 col-lg-3">
+                        <div class="col-4 col-md-6">
                             <input id="slytherin" type="image" src="assets/images/slytherin-crest.png"
                                 class="game-btn inline-block slytherin" alt="Slytherin Crest">
                         </div>
-                        <div class="col-0 col-md-2 col-lg-3">
-                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-0 col-md-2 col-lg-3">
-                        </div>
-                        <div class="col-6 col-md-4 col-lg-3">
+                        <div class="col-8 col-md-6">
                             <input id="hufflepuff" type="image" src="assets/images/hufflepuff-crest.png"
                                 class="game-btn inline-block hufflepuff" alt="Hufflepuff Crest">
                         </div>
-                        <div class="col-6 col-md-4 col-lg-3">
+                        <div class="col-4 col-md-6">
                             <input id="ravenclaw" type="image" src="assets/images/ravenclaw-crest.png"
                                 class="game-btn inline-block ravenclaw" alt="Ravenclaw Crest">
                         </div>
-                        <div class="col-0 col-md-2 col-lg-3">
-                        </div>
                     </div>
+                </div>
+                <div class="col-4 col-md-12 board">
+                    <img id="message-board" src="assets/images/background-wood.png" alt="message-board">
+                    <div class="row">
+                        <p class="lost">You have been conquered by cunning Slytherin</p>
+                    </div>
+
                 </div>
             </div>
         </div>
