--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <!-- Help and About pages -->
     <header>
         <div class="container">
-            <nav class="navbar navbar-dark">
-                <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
+            <nav class="navbar navbar-expand-sm navbar-dark">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span></button>
@@ -31,7 +31,7 @@
                             <a class="nav-link sr-only" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="help.html">Help</a>
+                            <a class="nav-link" href="help.html">How To Play</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about.html">About</a>
